--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,15 @@ section {
 .flex-one {
     flex: 1;
 }
+
+.align-center {
+    align-items: center;
+}
+
+.center {
+    justify-content: center;
+}
+
+.space-between {
+    justify-content: space-between;
+}
