--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,21 @@ section {
 .space-between {
     justify-content: space-between;
 }
+
+.btn {
+    cursor: pointer;
+    border: 0;
+    padding: 6px 12px;
+    border-radius: 3px;
+    line-height: 1.4;
+}
+
+.btn-default {
+    color: #ffffff;
+    background-color: #faa541;
+}
+
+.btn-primary {
+    color: #ffffff;
+    background-color: #364147;
+}
