--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,11 @@ section {
     color: #ffffff;
     background-color: #364147;
 }
+
+.form-control {
+    display: block;
+    padding: 6px 12px;
+    border: solid 1px #a0a0a0;
+    color: #8598a2;
+    line-height: 1.4;
+}
