--- a/css/main.css
+++ b/css/main.css
@@ -108,3 +108,14 @@ section {
     background-color: #a0a0a0;
     color: #ffffff;
 }
+.nav-list {
+    padding-left: 0;
+    width: 575px;
+    margin-top: 10px;
+}
+.nav-list li a {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 0.2px;
+}
