--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,7 @@ section {
     margin: 55px 15px;
     width: 100%;
     border-top: 1px solid #a0a0a0;
+    border-bottom: 1px solid #a0a0a0;
     padding: 25px 0;
 }
 .banner img { width: 250px;}
