--- a/css/main.css
+++ b/css/main.css
@@ -172,3 +172,10 @@ section {
     padding: 25px 0;
 }
 .banner img { width: 250px;}
+.banner-text {
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1;
+    text-align: center;
+}
