--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ section {
     position: relative;
 }
 .full-banner:before {
-    content: '';
+    content: "";
     position: absolute;
     border: 1px solid #ffffff;
     top: 30px;
