--- a/css/main.css
+++ b/css/main.css
@@ -303,3 +303,25 @@ footer a {
     padding: 0 0 4px;
 }
 footer a:hover { text-decoration: underline;}
+.social ul li {
+    display: inline-block;
+}
+.social ul li a {
+    display: block;
+    width: 23px;
+    height: 23px;
+    background-size: 23px 23px;
+    background-position: center;
+}
+.twitter {
+    background-image: url('../img/twitter.svg');
+}
+.facebook {
+    background-image: url('../img/facebook.svg');
+}
+.instagram {
+    background-image: url('../img/instagram.svg');
+}
+.pinterest {
+    background-image: url('../img/pinterest.svg');
+}
