--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,7 @@ footer a:hover { text-decoration: underline;}
     display: block;
     width: 100%;
     height: 1px;
-    margin-bottom: 30px 0;
+    margin: 30px 0;
     background: linear-gradient(to right, #f05a28 0, #e80a89 100%);
 }
 .copyright {
